# contract-version-example

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: build.yml
src/: lib.rs  version.rs
tests/: test_counter.rs
